# etl-rust

./: .gitignore  BENCHMARK_ANALYSIS.md  BENCHMARK_SUMMARY.md  Cargo.toml  FINAL_SUMMARY.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_TUNING.md  QUICK_RECOMMENDATIONS.md  README.md  benchmark_results.txt  optimized_benchmark_results.txt
benches/: README.md  etl_streaming_benchmark.rs  etl_streaming_benchmark_optimized.rs
docs/: PERFORMANCE_OPTIMIZATIONS.md
docs/plans/: 2025-11-20-etl-manager-zero-copy-design.md  2025-11-20-etl-manager-zero-copy.md  2025-11-20-rust-best-practices-implementation.md  2025-11-20-rust-code-review-design.md
example/: Cargo.toml  README.md  create_schema.sql  generate_large_dataset.py  profiling_report_latest.md  seed_mongodb.js  test_migration.rs  test_migration_simple.sh
example/src/: main.rs  migration.rs  mongodb_model.rs  postgres_model.rs
examples/: etl_with_manager.rs  setup_mongodb.sh  setup_mongodb_sample.js  setup_mongodb_sample.py  simple_bucket.rs  simple_etl.rs
examples/etl_with_database/: .env  main.rs  migration.rs
src/: lib.rs  main.rs
src/bucket/: bucket.rs  config.rs  mod.rs  processor.rs  tests.rs  types.rs
src/etl/: manager.rs  manager_test.rs  mod.rs  processor.rs  tests.rs  types.rs
