[workspace]
members = [".", "example"]
resolver = "2"

[package]
name = "etl-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
derive_builder = "0.20.2"
flume = "0.11.1"
futures = "0.3.31"
num_cpus = "1.16"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "1.0"
tokio = {version = "1.48.0", features = ["full"]}
tokio-util = "0.7.17"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand = { version = "0.8", features = ["small_rng"] }

[[bench]]
name = "etl_streaming_benchmark"
harness = false

[[bench]]
name = "etl_streaming_benchmark_optimized"
harness = false
