[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
dotenvy = "0.15.7"
etl-rust = { path = ".." }
futures = "0.3.31"
mongodb = "3.4.1"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
